--- a/orcid-widget.css
+++ b/orcid-widget.css
@@ -12,6 +12,16 @@
   position: relative;
 }
 
+.orcid-loader {
+    text-align: center;
+    padding: 5px;
+    background-color: #DDD;
+    color: #888;
+    border-radius: 10px;
+    box-shadow: inset 0 2px 8px rgba(0,0,0,.25);
+    text-shadow: 0 -1px 2px rgba(255,255,255,1);
+}
+
 /*.orcid-profile-uri {
   position: absolute;
   display: block;
